@@ -20,6 +20,7 @@ Features
 #831429)
 * Room list helpers, including auto focusing on primary text fields (see sf 
 #831685)
+* Auto-restart upon exception (see sf #889516)
 
 Bug Fixes
 
